--- a/config_sample.env
+++ b/config_sample.env
@@ -1,17 +1,14 @@
-#Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
-
 # ENTER BOT TOKEN (Get your BOT_TOKEN by talking to @botfather)
-BOT_TOKEN = ""
-GDRIVE_FOLDER_ID = ""
-OWNER_ID = ""
+BOT_TOKEN = "7431889273:AAGLbd1xdu3ahawfUHcY6iPseBv1VtlHb3c"
+GDRIVE_FOLDER_ID = "1OCOp7MJpy0YhK3aq0oh4SDK-3I65kQG3"
+OWNER_ID = "5061809342"
 DOWNLOAD_DIR = "/home/username/mirror-bot/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 5
 AUTO_DELETE_MESSAGE_DURATION = 20
-IS_TEAM_DRIVE = ""
-TELEGRAM_API = ""
-TELEGRAM_HASH = ""
-USE_SERVICE_ACCOUNTS = ""
+IS_TEAM_DRIVE = "False"
+TELEGRAM_API = "25734798"
+TELEGRAM_HASH = "7cd3ab57018735c167ca2c373c3a87cd"
+USE_SERVICE_ACCOUNTS = "False"
 
 # Optional config
 ACCOUNTS_ZIP_URL = "" #Enter Direct Links TO Import Service Accounts Directly From Urls Instead Of Adding Files To Repo.( Archive the accounts folder to a zip file.)
@@ -21,7 +18,7 @@ AUTHORIZED_CHATS = "" #Separated by space
 SUDO_USERS = ""  #Separated by space
 LOGS_CHATS = "" #Separated by space
 BOT_PM = ""
-DATABASE_URL = ""
+DATABASE_URL = "postgresql://postgres:SRHhSZUSDHTmTtoFqNsWroadoXNBpfgV@monorail.proxy.rlwy.net:38688/railway"
 IGNORE_PENDING_REQUESTS = ""
 INDEX_URL = ""
 MEGA_KEY = ""
